fix scroll, add jump types

--- a/css/Style.css
+++ b/css/Style.css
@@ -36,6 +36,20 @@ body {
     animation: pipe 1.5s infinite linear;
 }
 
+.pipe2 {
+    position: absolute;
+    bottom: 0;
+    width: 80px;
+    animation: pipe 1.1s infinite linear;
+}
+
+.pipe3 {
+    position: absolute;
+    bottom: 0;
+    width: 80px;
+    animation: pipe 0.6s infinite linear;
+}
+
 .mario {
     width: 150px;
     position: absolute;
@@ -97,7 +111,25 @@ body {
 
 /* ------------------------------------- */
 
-@keyframes pipe {
+@keyframes pipe1 {
+    0%{
+        right: -80px;
+    }
+    100% {
+        right: 100%;
+    }
+}
+
+@keyframes pipe2 {
+    0%{
+        right: -80px;
+    }
+    100% {
+        right: 100%;
+    }
+}
+
+@keyframes pipe3 {
     0%{
         right: -80px;
     }
